--- a/Manual/manual.tex
+++ b/Manual/manual.tex
@@ -24,6 +24,8 @@
 \PassOptionsToPackage{hyphens}{url} % url is loaded by hyperref
 \usepackage[unicode=true]{hyperref}
 \hypersetup{
+            pdftitle={Asteria user manual},
+            pdfauthor={Robin Baneke; Albert van Kiel; Menno Prinzhorn; Robert Kleef; Max van Hasselt; Timo Hermsen},
             pdfborder={0 0 0},
             breaklinks=true}
 \urlstyle{same}  % don't use monospace font for urls
@@ -94,9 +96,23 @@
 \makeatother
 
 
+\title{Asteria user manual}
+\author{Robin Baneke \and Albert van Kiel \and Menno Prinzhorn \and Robert Kleef \and Max van Hasselt \and Timo Hermsen}
 \date{}
 
 \begin{document}
+	\begin{titlepage}
+
+			\maketitle
+			
+			\vspace{0.8cm}
+		\begin{center}
+			Amsterdam University of Applied Sciences\\
+			HBO-ICT\\
+			The Netherlands\\
+			24-01-2019
+		\end{center}
+	\end{titlepage}
 
 \section{1. Getting started}\label{getting-started}
 
